TE-T127 PR-57: a small updation to prevent the overflow

--- a/Assets/CSS/styles.CSS
+++ b/Assets/CSS/styles.CSS
@@ -91,7 +91,7 @@ body{
 
 
 #carouselExample{
-    width: 106%;
+    width: 95%;
 }
 
 .cards-wrapper{
@@ -134,6 +134,7 @@ body{
 .instruments-down{
     overflow-x: hidden;
 }
+
 .instruments2{
     overflow-x: scroll;
     width: 80%;
@@ -193,7 +194,7 @@ body{
     }
 }
 
-@media (max-width:700px)
+@media (max-width:1000px)
 {
     .instruments-down{
         display: none;
@@ -202,6 +203,8 @@ body{
         display: none;
     }
 }
+
+
 
 
 
